styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.active-link {
  @apply pb-[4px] font-subtitle bg-[hsla(211,84%,30%,8.35%)] font-normal text-lg tracking-wide border-b-2 border-b-blue-deep text-blue-deep duration-150 ease-out transition-all;
}

.active-link-mobile {
  @apply pb-[4px] font-subtitle font-normal border-b-2 border-b-white text-white;
}

.gradient-blue {
  @apply bg-gradient-to-t from-blue-deep to-blue-dark;
}

.event-width-clamp {
  max-width: min(85vh, calc(100vw - 3rem));
}

